objects/Car__c/Car__c.object-meta.xml
<CustomObject>
    <label>Car Inventory Object</label>
    <nameField>
        <label>Car  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Car Inventory Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>