objects/Car__c/fields/Sedan_Color__c.field-meta.xml
<CustomField>
    <fullName>Sedan_Color__c</fullName>
    <description>The color of the sedan (e.g., Black, White, Silver).</description>
    <label>Sedan Color</label>
    <length>40</length>
    <type>Text</type>
</CustomField>