objects/Car__c/fields/SUV_Capacity__c.field-meta.xml
<CustomField>
    <fullName>SUV_Capacity__c</fullName>
    <description>The seating capacity of the SUV (e.g., 5-seater, 7-seater).</description>
    <label>SUV Capacity</label>
    <length>10</length>
    <type>Text</type>
</CustomField>