objects/Car__c/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <description>The Vehicle Identification Number (VIN) of the car</description>
    <label>VIN</label>
    <length>200</length>
    <type>Text</type>
</CustomField>