objects/Car__c/recordTypes/Sedan.recordType-meta.xml
<RecordType>
    <fullName>Sedan</fullName>
    <active>true</active>
    <label>Sedan</label>
</RecordType>