objects/Car__c/recordTypes/SUV.recordType-meta.xml
<RecordType>
    <fullName>SUV</fullName>
    <active>true</active>
    <label>SUV</label>
</RecordType>